# Metabase

./: RECORD  Version_Notes.txt  lexisnexisapi.gitignore  setup.py
ignore/: Build_library.sh  Distributing Python Package.txt  METADATA  README.md  Syntax_Testing.txt  Untitled-1.ipynb  Untitled.ipynb  pyproject.toml
src/lexisnexisapi/: credentials.py  metabase.py  webservices.py
src/lexisnexisapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
