# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lexisnexisapi"
version = "3.0.3"
authors = [{ name = "Robert Cuffney", email = "robert.cuffney@lexisnexis.com" },
		   { name = "Ozgur Aycan", email = "ozgur.aycan@lexisnexis.co.uk" }
]
description = "A module to support the lexisnexis metabase search api"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

